[package]
name = "demo-rust-string-issues"
version = "2.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.7.1" # Iterators which split strings on graphemes, words, etc.
unicode-reverse = "1.0.8" # Reverse a string slice in-place without allocating any memory on the heap.
