[package]
name = "demo-rust-string-issues"
version = "2.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.12.0" # Iterators which split strings on graphemes, words, etc.
unicode-reverse = "1.0.9" # Reverse a string slice in-place without allocating any memory on the heap.
